Fix cropping in presence control & course students lists #1098

--- a/src/app/presence-control/components/presence-control-entry/presence-control-entry.component.scss
+++ b/src/app/presence-control/components/presence-control-entry/presence-control-entry.component.scss
@@ -8,7 +8,7 @@
     "avatar status designation previously-absent"
     "avatar student-info student-info student-info"
     "avatar incident incident incident";
-  grid-template-columns: min-content min-content 3fr min-content;
+  grid-template-columns: min-content min-content 1fr min-content;
 }
 
 :host > * {
